main.css
.nav {
  background-color: white;
}

img {
  max-width: 100%;
}

footer {
  padding-right: 50px;
}

.foot-fonts {
  text-align: center;
  color: #395670;
  font-size: 20px;
  padding-top: 5%;
  padding-bottom: 5%;
  letter-spacing: 10px;
}

/*Spacing between social icons v*/
i + i {
  margin-left: 10px;
}

.background-img {
  width: 100%;
  height: 750px;
}

.skills-row,
.projects-row {
  background-color: #395670;
  height: 125px;
}

.skills-container {
  padding-top: 4%;
}

.project-images-row {
    background-color: #395670;
    padding-top: 3%;
    padding-bottom: 5%;
}

.navbar-brand, .active, p {
  font-family: 'Raleway', sans-serif;
}

.headings {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #ffffff;
  font-size: 45px;
  letter-spacing: 4px;
  padding-top: 2%;
}

.skill-logo {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #395670;
  font-size: 15px;
}

.container-fluid {
  position: relative;
  display: block;
}

.profile-pic {
  left: 28%;
  right: 28%;
  top: 10%;
  bottom: 35%;
  position: absolute;
  width: 350px;
}

.about-me {
  left: 23%;
  right: 23%;
  top: 60%;
  bottom: 15%;
  position: absolute;
  width: 500px;
  height: 650px;
  background-color: #395670;
  padding: 12px 10px;
  color: white;
}

.icon-jquery,
.icon-html5-alt,
.icon-git,
.icon-css3-alt,
.icon-ruby-on-rails,
.icon-ruby,
.icon-postgres,
.icon-javascript-alt,
.icon-mongodb,
.icon-python {
  font-size: 65px;
  color: #395670;
}

.icon-bootstrap {
  font-size: 60px;
  color: #395670;
}

.project-fonts {
  color: #ffffff;
  letter-spacing: 2px;
}

.col-sm-4 {
  text-align: center;
}

.invisible {
  color: white;
}

.navbar-right {
  padding-right: 20px;
}

.project-image {
  height: 300px;
  width: 400px;
}

.project-text {
  text-align: left;
  font-size: 12px;
}

.project-title {
  font-size: 20px;
}
/*trying to add padding between containers*/
/*.col-sm-offset-4 {
  margin-top: 50%;
}*/

